# brane_cwl

./: CHANGELOG.md  Cargo.toml  Dockerfile.dev  Dockerfile.rls  README.md
.cargo/: config.toml
.github/workflows/: audit.yml  ci.yml  mixin-cargo-build.yml  mixin-cargo-check.yml  mixin-cargo-clippy.yml  mixin-cargo-llvm-cov.yml  mixin-cargo-test.yml  nightly.yml
brane-api/: Cargo.toml
brane-api/src/: cli.rs  data.rs  errors.rs  infra.rs  main.rs  packages.rs
brane-ast/: Cargo.toml
brane-ast/src/: ast.rs  compile.rs  data_type.rs  edgebuffer.rs  errors.rs  fetcher.rs  func_id.rs
brane-ast/src/traversals/: attributes.rs  compile.rs  data.rs  flatten.rs  location.rs  metadata.rs  null.rs  prune.rs  resolve.rs  typing.rs  workflow_optimize.rs  workflow_resolve.rs
brane-ast/src/traversals/print/: ast.rs  ast_unresolved.rs  dsl.rs  symbol_tables.rs
brane-cc/: Cargo.toml
brane-cc/src/: cli.rs  errors.rs  main.rs  spec.rs
brane-cfg/: Cargo.toml
brane-cfg/src/: backend.rs  certs.rs  errors.rs  infra.rs  node.rs  policies.rs  proxy.rs
brane-cli/: Cargo.toml
brane-cli-c/: Cargo.toml
brane-cli-c/src/: lib.rs
brane-cli/src/: build_common.rs  build_ecu.rs  certs.rs  check.rs  cli.rs  cwl.rs  data.rs  errors.rs  instance.rs  main.rs  packages.rs  registry.rs  repl.rs  run.rs  test.rs  utils.rs  verify.rs  version.rs  vm.rs
brane-ctl/: Cargo.toml  build.rs
brane-ctl/src/: cli.rs  completions.rs  download.rs  errors.rs  generate.rs  lifetime.rs  main.rs  packages.rs  policies.rs  spec.rs  unpack.rs
brane-ctl/src/old_configs/v1_0_0/: node.rs
brane-drv/: Cargo.toml
brane-drv/src/: cli.rs  errors.rs  handler.rs  main.rs  planner.rs  vm.rs
brane-dsl/: Cargo.toml
brane-dsl/src/: errors.rs
brane-dsl/src/scanner/: tokens.rs
brane-exe/: Cargo.toml
brane-exe/src/: dummy.rs  errors.rs  pc.rs  thread.rs  value.rs
brane-job/: Cargo.toml
brane-job/src/: cli.rs  errors.rs  main.rs  worker.rs
brane-let/: Cargo.toml
brane-let/src/: cli.rs  errors.rs  exec_ecu.rs  main.rs
brane-log/: Cargo.toml
brane-plr/: Cargo.toml
brane-plr/src/: cli.rs  main.rs  planner.rs
brane-prx/: Cargo.toml
brane-prx/src/: cli.rs  client.rs  errors.rs  main.rs  manage.rs  redirect.rs
brane-reg/: Cargo.toml
brane-reg/src/: cli.rs  data.rs  errors.rs  main.rs  server.rs  store.rs
brane-shr/: Cargo.toml
brane-shr/src/: errors.rs  formatters.rs  fs.rs
brane-tsk/: Cargo.toml
brane-tsk/src/: api.rs  caches.rs  docker.rs  errors.rs  local.rs  spec.rs  tools.rs
overview/: Cargo.toml
overview/src/: lib.rs
specifications/: Cargo.toml
specifications/src/: address.rs  arch.rs  common.rs  container.rs  data.rs  driving.rs  errors.rs  os.rs  package.rs  profiling.rs  registering.rs  version.rs  working.rs
xtask/: Cargo.toml
xtask/src/: build.rs  cli.rs  completions.rs  external_cli.rs  install.rs  main.rs  man.rs  package.rs  registry.rs  set_version.rs  utilities.rs
