[package]
name = "brane-cli"
rust-version = "1.81"
edition = "2021"
default-run = "brane"
version.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "brane"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.66"
async-trait = "0.1.67"
base64 = "0.22.0"
bollard = "0.18.0"
chrono = "0.4.35"
clap = { version = "4.5.6", features = ["derive","env"] }
console = "0.15.5"
dialoguer = "0.11.0"
dirs = "6.0.0"
dotenvy = "0.15.0"
enum-debug.workspace = true
error-trace.workspace = true
flate2 = { version = "1.0.13", features = ["zlib"], default-features = false }
fs_extra = "1.2.0"
futures-util = "0.3.30"
# git2 = { version = "0.17", features = ["vendored-libgit2"] }
graphql_client = "0.14.0"
humanlog.workspace = true
human-panic = "2.0.0"
hyper = "1.3.0"
indicatif = "0.17.0"
lazy_static = "1.4.0"
log = "0.4.22"
names.workspace = true
parking_lot = "0.12.1"
path-clean = "1.0.0"
prettytable-rs = "0.10.0"
rand = "0.9.0"
rustls = "0.21.6"
rustyline = "15.0.0"
rustyline-derive = "0.11.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
serde_yaml = { version = "0.0.10", package = "serde_yml" }
tar = "0.4.21"
tempfile = "3.10.1"
thiserror = "2.0.0"
tokio = { version = "1.38.0", features = ["full"] }
tokio-stream = "0.1.6"
tokio-util = { version = "0.7.1", features = ["codec"] }
tonic = "0.12.0"
uuid = { version = "1.7.0", features = ["serde", "v4"] }
x509-parser = "0.17.0"

# Workspace dependencies
reqwest = { workspace = true, features = ["json", "stream", "multipart"] }

brane-ast = { path = "../brane-ast" }
brane-cfg = { path = "../brane-cfg" }
brane-dsl = { path = "../brane-dsl" }
brane-exe = { path = "../brane-exe" }
brane-shr = { path = "../brane-shr" }
brane-tsk = { path = "../brane-tsk" }
specifications = { path = "../specifications" }

[features]
print_exec_path = [ "brane-exe/print_exec_path" ]

[lints]
workspace = true
