[package]
name = "brane-dsl"
rust-version = "1.81"
edition = "2021"
version.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
enum-debug.workspace = true
log = "0.4.22"
nom = "7.1.0"
nom_locate = "4.1.0"
rand = "0.9.0"
regex = "1.5.0"
serde = "1.0.204"

brane-shr = { path = "../brane-shr" }
specifications = { path = "../specifications" }

[lints]
workspace = true
