[package]
name = "brane-shr"
edition = "2021"
rust-version = "1.81"
version.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
async-compression = { version = "0.4.0", features = ["tokio","gzip"] }
console = "0.15.5"
dialoguer = { version = "0.11.0", features = ["completion", "history"] }
enum-debug.workspace = true
fs2 = "0.4.0"
hex = "0.4.3"
humanlog.workspace = true
indicatif = "0.17.0"
log = "0.4.22"
regex = "1.5.0"
sha2 = "0.10.6"
thiserror = "2.0.0"
tokio = { version = "1.38.0", features = ["rt","macros"] }
tokio-stream = "0.1.6"
tokio-tar = "0.3.0"
url = "2.5.0"

# Workspace dependencies
reqwest = { workspace = true, features = ["stream"] }

specifications = { path = "../specifications" }

[dev-dependencies]
rand = "0.9.0"
tempfile = "3.10.1"

[lints]
workspace = true
